--- a/Lunar_Veil/Views/Employees/Index.cshtml
+++ b/Lunar_Veil/Views/Employees/Index.cshtml
@@ -61,6 +61,9 @@
                 @Html.DisplayFor(modelItem => item.PhotoImagePath)
             </td>
             <td>
+                 <img src="~/images/photos/@item.PhotoImagePath" width="100" />
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Salary)
             </td>
             <td>
